# soap

./: CMakeLists.txt  README.md
src/: libxml2_example.cpp
tests/: CMakeLists.txt  test_xml_parser.cpp
xml/: class_sample.xml  sample.xml
